[metadata]
name = kimmos_datastructures
version = 0.0.0 
# attr: src.VERSION
description = Datastructures in Python
long_description = file: README.md
keywords = datastructures
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
# scripts =
#   bin/first.py
#   bin/second.py
install_requires =
  dataclasses; python_version =="3.6"
  typing-extensions

[options.extras_require]
dev = 
  black
  hypothesis
  pytest

[options.packages.find]
where=src
